# claude-mcp-setup

./: .coverage  .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  ARCHITECTURE.md  CLOUD_MIGRATION.md  CLOUD_SETUP_COMPLETE.md  CODE_OF_CONDUCT.md  COMMANDS_TO_RUN.txt  CONFIGURATION.md  CONTRIBUTING.md  DASHBOARD_POSTGRES_FIX.md  DEPLOYMENT_STEPS.md  DEPLOY_NOW.md  DEPLOY_SIMPLE.sh  DEPLOY_SUMMARY.txt  DOCKER_QUICKSTART.md  DOCKER_SETUP.md  ENV_CONFIG.md  EVERYTHING_READY.md  FINAL_STEPS.sh  GETTING_STARTED.md  GITHUB_ACTIONS_FIX.md  GOAL_CG_TAGS_FIX.md  MCPCTL_GUIDE.md  MCPCTL_QUICK_REFERENCE.md  MIGRATION_V3.md  Makefile  PERFORMANCE_OPTIMIZATION.md  PUSH_SAFELY.sh  PUSH_TO_GITHUB.md  QUICKEST_DEPLOY.sh  QUICKSTART.md  README.md  README_CLOUD.md  README_GOAL_AGENT.md  README_START.md  SECURITY.md  (+12 more)
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  question.md
.github/workflows/: auto-pr-cli.yml  auto-pr.yml  build-only.yml  deploy.yml  mcp-test.yml  mcp-test.yml.example
cloud/: .gitignore  CLOUD_DEPLOYMENT_GUIDE.md  DOCKER_DEPLOYMENT.md  Dockerfile.deployer  GITHUB_SECRETS_FIX.md  Makefile  QUICK_START.md  README.md  SECRETS_SUMMARY.md  SECURITY.md  SETUP_INSTRUCTIONS.md  UPDATE_DNS.md  deploy.sh  docker-deploy.sh  mcp-http-proxy.py  set-aws-secrets.sh  setup-github-secrets.sh  verify-setup.sh
cloud/config-examples/: claude-desktop-cloud.json  claude-desktop-loadbalancer.json
cloud/docker/: Dockerfile.base  Dockerfile.github  Dockerfile.goal-agent  Dockerfile.internet  Dockerfile.jira  Dockerfile.memory-cache  build-all.sh
cloud/helm/mcp-servers/: Chart.yaml  secrets.yaml.example  values.yaml
cloud/helm/mcp-servers/templates/: github-deployment.yaml  goal-agent-deployment.yaml  internet-deployment.yaml  jira-deployment.yaml  memory-cache-deployment.yaml  namespace.yaml  secrets.yaml
cloud/kubernetes/: mcp-servers-deployment.yaml  namespace.yaml  postgres-deployment.yaml  redis-deployment.yaml
cloud/terraform/: main.tf  terraform.tfvars.example
config/: mcp_brave_settings.json  mcp_settings.json.template
docker/: init-db.sh
requirements/: common.txt  github_requirements.txt  goal_agent_requirements.txt  jira_requirements.txt  redis_requirements.txt
scripts/: init_database.py  install_dashboard.sh  install_precommit.sh  run_dashboard.py  start_all_servers.py  stop_all_servers.py  test_server_startup.py
servers/: __init.py__  __init__.py  base_client.py  bash_server.py  config.py  dashboard_server.py  database.py  error_handler.py  file_server.py  frappe_server.py  github_server.py  goal_agent_server.py  internet_server.py  internets_server.py  jira_server.py  logging_config.py  memory_cache_server.py
servers/static/: index.html
tests/: test_dashboard.py
